--- a/_posts/0000-01-02-mo-source.md
+++ b/_posts/0000-01-02-mo-source.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+![dancing meme](https://i.kym-cdn.com/photos/images/newsfeed/001/563/119/d56.jpg) :tada:
 Use the left arrow to go back!
